fix overflow of online users and room list

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,11 +19,13 @@ body {
   // background: url("./images/WoodyBackground.svg");
   height: 100%;
   width: 100%;
+  overflow-y: hidden;
   // background-image: url(https://cdn.pixabay.com/photo/2015/01/03/16/57/plank-587598_960_720.jpg);
 }
 
 #root {
   height: 100vh;
+  overflow-y: hidden;
 }
 
 input,
