--- a/src/styles/views/Whole.scss
+++ b/src/styles/views/Whole.scss
@@ -3,7 +3,7 @@
 .whole {
   background-color: $Brown;
   overflow-y: hidden;
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
 
